<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电视粉</string>
    <string name="login">登录</string>
    <string name="login_bottom_Layout">使用以下方式登录</string>
    <string name="reg">注册</string>
    <string name="reg2tvfan">注册成为电视粉用户</string>
    <string name="hint_name">用户名/邮箱</string>
    <string name="hint_pass">密码</string>
    <string name="login_save_password">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="chinesename">中文名：</string>
    <string name="star_intro">个人介绍</string>
    <string name="star_intro_p">相关剧集</string>
    <string name="program_comment_p2t">按住 说话</string>
    <string name="more">加载更多</string>
    <string name="cp_play_tool_progress">00:00:00/00:00:00</string>
    <string name="pm_mail_name">私信箱</string>
    <string name="videoview_tips">正在为您加载，请稍候...</string>
    <string name="notloginyet">您尚未登录</string>
    <string name="nimingfasong">匿名发送</string>
    <string name="tvscreenshot">电视截图</string>
    <string name="rescreenshot">重新截图</string>
    <string name="navigator_show_pic">图片浏览</string>
    <string name="navigator_recommand">推 荐</string>
    <string name="navigator_activities">活 动</string>
    <string name="navigator_friend">好 友</string>
    <string name="navigator_my">我 的</string>
    <string name="navigator_otheruser">个人中心</string>
    <string name="navigator_myfellowing">我的关注</string>
    <string name="navigator_myfans">我的粉丝</string>
    <string name="navigator_mybook">我的预约</string>
    <string name="navigator_mybadge">我的徽章</string>
    <string name="navigator_myzhuiju">我的追剧</string>
    <string name="navigator_mymsg">我的私信</string>
    <string name="navigator_mycomment">我的评论</string>
    <string name="navigator_recommandapp">软件推荐</string>
    <string name="navigator_activity_detail">活动详情</string>
    <string name="navigator_comment_detail">评论详情</string>
    <string name="navigator_my_channel">我的频道</string>
    <string name="navigator_feedback">意见反馈</string>
    <string name="navigator_special">专题</string>
    <string name="navigator_around">周边新闻</string>
    <string name="navigator_playhistory">播放历史</string>
    <string name="navigator_search">搜索</string>
    <string name="navigator_search_clear">搜索</string>
    <string name="navigator_refresh">刷新</string>
    <string name="navigator_edit">编辑信息</string>
    <string name="navigator_btn_edit">编辑</string>
    <string name="navigator_btn_send">发表</string>
    <string name="navigator_book">预约</string>
    <string name="navigator_zhuiju">追剧</string>
    <string name="navigator_comment">他的评论</string>
    <string name="navigator_btn_playhistory">观看历史</string>
    <string name="navigator_btn_search">搜索</string>
    <string name="navigator_commit">提交</string>
    <string name="navigator_send_comment">发表评论</string>
    <string name="navigator_stardetail">明星秀</string>
    <string name="navigator_badge_detail">徽章详情</string>
    <string name="activities_all_tag">活动徽章</string>
    <string name="activities_my_tag">我的徽章</string>
    <string name="activities_my_text_left">您获得了</string>
    <string name="activities_my_text_right">枚徽章</string>
    <string name="activities_my_tip_text">我的电视粉，我的徽章，记录你在电视粉中的点点滴滴，还可以兑换各种礼品哦~！</string>
    <string name="friend_following_tag">我的关注</string>
    <string name="friend_find_tag">寻找好友</string>
    <string name="friend_all_tag">所有人</string>
    <string name="friend_search_hint">输入昵称/搜索好友/添加好友</string>
    <string name="program_search_hint">节目/演员</string>
    <string name="my_bind">账号绑定</string>
    <string name="my_about">关于电视粉</string>
    <string name="my_help">使用帮助</string>
    <string name="my_newversion">检测新版本</string>
    <string name="my_clear_cache">清除缓存</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_score">给我评分</string>
    <string name="my_otherapp">精品软件推荐</string>
    <string name="my_zuxiao">注销</string>
    <string name="my_function_fellow">关注</string>
    <string name="my_function_fans">粉丝</string>
    <string name="my_function_medal">我的徽章</string>
    <string name="my_function_comment">评论</string>
    <string name="my_function_privatemsg">私信</string>
    <string name="my_function_zhuiju">追剧</string>
    <string name="my_function_yuyue">预约</string>
    <string name="my_function_atme">被@</string>
    <string name="my_function_replyme">被回复</string>
    <string name="my_function_channel">我的频道</string>
    <string name="err_tip">亲,数据记载失败\n请点击重新加载</string>
    <string name="pd_comment">评论</string>
    <string name="pd_video">视频</string>
    <string name="pd_detail">详情</string>
    <string name="comment_from">来自android客户端</string>
    <string name="pd_detail_intro">节目介绍</string>
    <string name="pd_detail_star">相关明星</string>
    <string name="pd_detail_related">周边新闻</string>
    <string name="pd_detail_juzhao">剧照花絮</string>
    <string name="pd_detail_from">来自豆瓣的评分</string>
    <string name="pd_video_channels">播出此节目的电视台</string>
    <string name="pd_video_vod_tips">在线观看</string>
    <string name="regist_name_hint">用户名/昵称</string>
    <string name="regist_password_hint">密码</string>
    <string name="regist_confirm_password_hint">确认密码</string>
    <string name="regist_email_hint">电子邮箱</string>
    <string name="feedback_content_hint">输入您要对我们说的话，您的意见是我们宝贵的资源~</string>
    <string name="feedback_user_hint">输入您的联系方式(QQ/邮箱/手机)</string>
    <string name="activity_deadline">领取时间剩余:</string>
    <string name="activity_description">描述</string>
    <string name="help_tip">点击开启电视粉之旅~</string>
    <string name="ue_original_password">原密码</string>
    <string name="ue_new_password">新密码</string>
    <string name="ue_confirm_password">确认密码</string>
    <string name="mylistview_pull">下拉可以刷新</string>
    <string name="mylistview_release">松开立即刷新</string>
    <string name="mylistview_update">上次更新:</string>
    <string name="mylistview_refreshing">正在刷新</string>
    <string name="loading_more">正在加载中...</string>
    <string name="sd_sync_tip">同步到:</string>
    <string name="playhistory_tip">热门播放</string>
    <string name="ps_seatch_history_tip">搜索历史</string>
    <string name="ps_seatch_history_no_tip">暂无搜索记录</string>
    <string name="ps_hot_key_tip">热门搜索</string>
    <string name="comment_reply">回复:</string>
    <string name="comment_zhuanfa">转发:</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="init_decoders">正在初始化播放器...</string>
    <string name="star_intro_no_intro">暂无相关介绍</string>
    <string name="activity_tips_default">暂无介绍</string>
    <string name="send_comment_hint">说点什么吧~</string>
    <string name="program_no_info">暂无节目信息</string>
    <string name="qqgroup">QQ群：254361944</string>
    <string name="weibo">微博：@电视粉</string>
    <string name="dianshifenxieyi">电视粉使用协议</string>
    <string name="xieyi_hint">我已阅读并接受 </string>
    <!-- 2.2.3增加  推送服务中的字符串常量 -->
    <string name="notification_fail_connect">长连接建立失败</string>
    <string name="notification_err_returnvalue">返回值不对</string>
    <string name="notification_err_user">当前用户不是消息推送目标用户</string>
    <string name="notification_setup_connection">建立连接成功</string>
    <string name="notification_close_connection">关闭长连接</string>
    <string name="notification_content_title">电视粉温馨提示</string>
    <!-- 2.2.3播放器页面 -->
    <string name="player_back">返回</string>
    <string name="player_share">分享</string>
    <string name="player_share_weixin">分享到微信</string>
    <string name="player_share_sina">分享到微博</string>
    <string name="player_cant_play_tips1">对不起，加载失败！</string>
    <string name="player_cant_play_tips2">您试试加载其他节目源或</string>
    <string name="player_cant_play_tips3">吧！</string>
    <!-- 网页播放 -->
    <string name="navigator_play_btn">播放</string>
    <string name="net_live_loading_txt">正在加载，请耐心等待</string>
    <!-- 个人中心 since 2.2.4 -->
    <string name="my_login_txt">登 录 电 视 粉</string>
    <string name="my_register_txt">注册成为电视粉用户</string>
    <string name="notificaion_btn">消息推送</string>
    <string name="share_tip_txt">把这个视频分享到微信</string>
    <!-- mainwebplay -->
    <string name="Main.VndErrorTitle">Unable to open url</string>
    <string name="Main.VndErrorMessage">You may not have an application able to open this url: %s.</string>
    <string name="ApplicationName">TVFan</string>
    <string name="ApplicationNameUrl">TVFan.cn</string>
    <string name="HttpAuthenticationDialog.DialogTitle">Sign in to %1$s - %2$s</string>
    <string name="Commons.Proceed">Proceed</string>
    <string name="Commons.SslWarningsHeader">There are problems with the security certificate for this site.</string>
    <string name="Commons.SslUntrusted">This certificate is not from a trusted authority.</string>
    <string name="Commons.SslIDMismatch">The name of the site does not match the name on the certificate.</string>
    <string name="Commons.SslExpired">This certificate has expired.</string>
    <string name="Commons.SslNotYetValid">This certificate is not valid yet.</string>
    <string name="Commons.Cancel">Cancel</string>
    <string name="main_web_play_waiting_tips">加载中，请稍候...</string>
    <string name="navigator_channel">频道</string>
    <string name="channel_my_tag">我的频道</string>
    <string name="channel_rank_tag">排行榜</string>
    <string name="channel_all_tag">全部频道</string>
    <string name="channel_edit_add">添加到"我的频道"</string>
    <string name="channel_edit_delete">从"我的频道"中移除</string>
    <string name="navigator_channel_edit">编辑</string>
    <string name="navigator_channel_complete">完成</string>
    <string name="navigator_channel_detail">频道详情</string>
    <string name="search_txt">搜索演员节目</string>
    <string name="menu_content">精彩内容</string>
    <string name="menu_recommend">首页推荐</string>
    <string name="menu_tv">电视剧</string>
    <string name="menu_film">电影</string>
    <string name="menu_oversea">海外剧</string>
    <string name="menu_zongyi">综艺</string>
    <string name="menu_special">专题</string>
    <string name="menu_live">直播频道</string>
    <string name="menu_live_all">全部频道</string>
    <string name="menu_live_ranking">排行榜</string>
    <string name="menu_friend">朋友</string>
    <string name="menu_friend_search">寻找好友</string>
    <string name="menu_friend_all">所有人</string>
    <string name="menu_activity">活动</string>
    <string name="menu_medal">徽章</string>
    <string name="menu_movie">电影</string>
    <string name="menu_login_btn">登录</string>
    <string name="menu_regist_btn">注册</string>
    <string name="time">00:00:00</string>
    <string name="search_txt">搜索附近设备</string>
    <string name="cancel_txt">取消</string>
    <string name="searching_hint">正在搜索DLNA设备,请稍等...</string>
    <string name="device_hint">选择DLNA设备</string>
    <string name="dlna_exit_tv">退出电视播放</string>

</resources>