<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/navigator_layout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/navigator_bg" >

        <TextView
            style="@style/navigator_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/navigator_feedback" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back_btn" />

        <Button
            android:id="@+id/commit"
            style="@style/navigator_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/navigator_commit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/navigator_layout"
        android:padding="15dp" >

        <EditText
            android:id="@+id/content_text"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:background="@drawable/feedback_text_bg"
            android:gravity="top"
            android:hint="@string/feedback_content_hint"
            android:padding="15dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/user_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_text"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/feedback_text_bg"
            android:gravity="top"
            android:hint="@string/feedback_user_hint"
            android:padding="15dp"
            android:textSize="14sp" />
    </RelativeLayout>
    
    
    <!-- cover -->
    <ImageView
        android:id="@+id/user_feedback_cover"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:src="#99000000"
        android:visibility="gone" />

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/commucation_dialog" />
    
    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/corners" /> 

</RelativeLayout>