<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bindaccount"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <!-- 顶部标题栏 -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="top"
        android:background="@drawable/navigator_bg" >
        <TextView
            style="@style/navigator_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login" />
        <Button
            android:id="@+id/bindaccount_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back_btn" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="47dp"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/bindaccount_edit_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/uc_signature"
            android:hint="@string/regist_email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/bindaccount_edit_passwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/uc_personintro"
            android:hint="@string/regist_password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="16dp" />
        <ImageView
            android:id="@+id/bindaccount_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:padding="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/loginoldaccount" />
    </LinearLayout>
    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/commucation_dialog" />
</FrameLayout>